# volatility-driven-decay

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  paper_v9.docx  paper_v9.md  paper_v9.tex  pyproject.toml  requirements.txt  run_experiments.py
arxiv_submission/: README.txt  main.tex
configs/: default.yaml
experiments/: 01_drift_detection_comparison.py  02_scalar_simulation_fixed.py  03_vector_memory_test.py  04_mixed_drift.py  05_ablation_study.py  06_stability_analysis.py  07_latency_benchmark.py  08_baseline_comparison.py  09_precision_analysis.py  10_detection_comparison.py  12_gradual_drift.py  13_adwin_comparison.py  14_scaling_analysis.py  15_statistical_validation.py  16_real_rag.py  17_bursty_drift.py  18_reversion_scenario.py  19_mixed_uncertainty.py  20_staleness_focus.py  21_effective_lambda.py  22_extended_baselines.py  23_real_rag_extended.py  24_llm_evaluation.py  25_statistical_hardening.py  26_smoothing_precision.py  27_real_embeddings.py  28_llm_actual_evaluation.py  29_sigmoid_sensitivity.py  30_confirmatory_n30.py  31_adaptive_baselines.py  32_bimodality_robust.py  33_three_domain.py  34_statistical_corrections.py  35_llm_validation_expanded.py  36_real_embedding_suite.py  37_activation_and_baselines.py  38_streamingqa_benchmark.py  39_freshqa_benchmark.py  40_auto_calibration.py  41_embedding_generalization.py  (+2 more)
results/: 07_latency_results.txt  14_scaling_results.csv  17_bursty_drift.json  18_reversion.json  19_mixed_uncertainty.json  20_staleness_focus.json  21_effective_lambda.json  22_extended_baselines.json  23_real_rag_extended.json  24_llm_evaluation.json  25_statistical_hardening.json  26_smoothing_precision.json  27_real_embeddings.json  28_llm_actual_evaluation.json  29_sigmoid_sensitivity.json  30_confirmatory_n30.json  31_adaptive_baselines.json  32_bimodality_robust.json  33_three_domain.json  34_statistical_corrections.json  35_llm_validation_expanded.json  (+6 more)
(+27 files in other folders)
