[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdd"
version = "0.1.0"
description = "Volatility-Driven Decay for RAG Memory Systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abe Diaz", email = "abediaz@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
]
rag = [
    "chromadb>=0.4",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = ["vdd[ml,rag,dev]"]

[project.urls]
Homepage = "https://github.com/abe238/volatility-driven-decay"
Repository = "https://github.com/abe238/volatility-driven-decay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/vdd --cov-report=term-missing"
